<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.app.art_master.chessknight.ChessBoard">


    <FrameLayout
        android:id="@+id/chessBoard"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:background="@color/colorBoard">

    </FrameLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:background="@color/colorBackground">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/chess_board_text_view" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/cell_text_view"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/col_text_view"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
            <EditText
                android:id="@+id/editTextNumColumn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="2"
                android:textAlignment="center"
                android:minEms="1"
                android:text="@string/minCellAndColValue"
                android:layout_weight="1"
                android:inputType="number" />

            <EditText
                android:id="@+id/editTextNumCell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minEms="1"
                android:text="@string/minCellAndColValue"
                android:textAlignment="center"
                android:ems="2"
                android:inputType="number" />
        </LinearLayout>
        <Button
            android:id="@+id/buttonView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:enabled="true"
            android:text="@string/button_view" />
        <Button
            android:id="@+id/buttonClear"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:enabled="false"
            android:text="@string/button_clear" />
        <Button
            android:id="@+id/buttonStart"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:enabled="false"
            android:text="@string/button_start" />

    </LinearLayout>

</android.support.v7.widget.LinearLayoutCompat>
